# https---github.com-Unyuwaffle-chatbot1

./: .gitignore  pyproject.toml  requirements.txt  test.py  test_stream_chat.py
api/: routes.py
chatbotDirectory/: chatbot.py  common.py  functioncalling.py
loding/: mongodbConnect.py  vector_db_upload.py
